--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "orm",
     "openapi"
   ],
+  "homepage": "https://github.com/billju/swagger-orm-express",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/billju/swagger-orm-express.git"
+  },
   "author": "chuboy",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "better-sqlite3": "^9.3.0"
   }
 }
